--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Tangerines site!</title>
 	<style>
 		<style type="text/css">
 			/* Height */
@@ -200,8 +200,8 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<center><h1>My First Heading</h1>
+<p>My first paragraph.</p></center>
 
 </body>
 </html>
